# trex-plus-wrapper

./: .gitignore  CMakeLists.txt  build_script  build_trex  demo_trex  query_for_trex  run_trex_test  write_binary_tesla_query.sh
TRex-Java-client/: TESLA.g4  build.xml  pub_events
TRex-Java-client/rules/: create_rule_variations.bash  pub_rules.sh  select_random_rule
TRex-Java-client/rules/irrelevant-rules-10/: original
TRex-Java-client/rules/rules-r5/: original
TRex-Java-client/rules/rules-r9/: original
TRex-Java-client/rules/simple-rules-r5/: original
TRex-Java-client/rules/simple-rules-r9/: original
TRex-Java-client/src/polimi/trex/common/: OpValueReference.java
TRex-Java-client/src/polimi/trex/communication/: PacketListener.java
TRex-Java-client/src/polimi/trex/examples/: CommandLineClient.java  ParseRuleWriteBinary.java
TRex-Java-client/src/polimi/trex/ruleparser/: TESLABaseListener.java  TESLALexer.java  TESLAListener.java  TESLAParser.java
TRex-Server/: .gitignore  configure.ac  custom_setup.sh  run_debug_configure  run_production_configure
TRex-Server/src/: Main.cpp  Main.h  Makefile.am  external.hpp
TRex-Server/src/Connection/: Connection.cpp  Connection.hpp  RequestHandler.cpp  RequestHandler.hpp
TRex-Server/src/Packet/: BufferedPacketUnmarshaller.cpp  BufferedPacketUnmarshaller.hpp  Pkt.hpp
TRex-Server/src/Server/: SOEPServer.cpp
TRex-Server/src/Test/: RuleR0.cpp  RuleR1.cpp  RuleR1.hpp  TestResultListener.cpp  TestRule.hpp
TRex-Server/src/Util/: Logging.cpp  TRexUtils.cpp
TRex-Server/src/experiment-framework/: experimentapi.cpp  experimentapi.h
TRex2-lib/: configure.ac  run_debug_configure  run_production_configure
TRex2-lib/src/: Makefile.am
TRex2-lib/src/Common/: CompositeEventTemplate.cc  CompositeEventTemplate.h  Consts.h  Funs.cc  OpTree.h  tcpclient.cpp  tcpclient.h  trace-framework.cpp  trace-framework.hpp
TRex2-lib/src/Communication/: SimpleRoutingTable.cc  TRexServer.cc
TRex2-lib/src/Engine/: AbstractConstraintIndex.cc  BoolConstraintIndex.cc  CompositeEventGenerator.cc  FloatConstraintIndex.cc  IndexingTable.cc  IntConstraintIndex.cc  NoConstraintIndex.cc  StacksRule.cc  StacksRule.h  StringConstraintIndex.cc  TRexEngine.cc  TRexEngine.h  client.h
TRex2-lib/src/Marshalling/: Marshaller.cc  Unmarshaller.cc
TRex2-lib/src/Packets/: PubPkt.cc  PubPkt.h  RulePkt.cc  RulePkt.h
